--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ button:focus
 }
 
 header{
-    background-image: url("../image/cbdb.jpg");
+    background-image: url("../image/PertinentIgnorantKakapo-size_restricted.gif");
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -37,15 +37,15 @@ header{
    align-items: center;
     position: relative;
 }
-header .layout{
+/* header .layout{
     position: absolute;
     top: 0%;
     left:0%;
    width: 100%;
    height: 100%;
-   /* background-color: rgba(0, 0,0,0.8); */
-   background-image: url("../image/PertinentIgnorantKakapo-size_restricted.gif");
-}
+   background-color: rgba(0, 0,0,0.8);
+   
+} */
 header .box-1{
     text-align: center;
     color: #fff;
