--- a/css/style.css
+++ b/css/style.css
@@ -131,106 +131,8 @@ header nav .navbar-brand span{
 }
 
 
- #About .part1 .frme{
-     margin: 1px;
-    border: 7px solid #555; 
-    
-    margin:auto;
-    border-radius: 10px;
-}
-#About .part1 .frme .logo{
-    transform: translate(15px,15px);
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative;
-}
+ 
 
-#About .part1 .frme .logo .layout{
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0,0,0.5);
-    transition: all 2s ease;
-    opacity: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-
-    
-}
-#About .part1 .frme .logo:hover .layout{
-    top: 0;
-    left: 0;
-    opacity: 1;
-  
-}
-#About .part1 .frme .logo .layout ul 
-{
-list-style: none;
-margin: 0;
-padding: 0;
-}
-#About .part1 .frme .logo .layout ul li {
-    display: inline-block;
-    
-}
-#About .part1 .frme .logo .layout ul li a{
-    color: #FFf;
-    cursor: pointer;
-    text-decoration: none;
-    display:block;
-    font-size:20px;
-    height:20px;
-     width:32px;
-     transition: all 1s ease-in-out;
-     
-    
-}
-#About .part1 .frme .logo .layout ul li:hover a{
-color: #FF305b;
-
-}
-#About i{
-   
-    margin-right: 10px;
-    
-}
-#About p{
-    min-width: 300px;
-    text-align: center;
-    position: relative;
-    left: 10px;
-    margin-top: 10px;
-}
-#About h2{
-    color: #000;
-    font-size: 34px;
-    font-weight: 600;
-    line-height: 22px;
-    text-transform: uppercase;
-    
-}
-.h2::after{
-    content: "";
-    background-color:#FF305b;
-    height: 25px;
-    left:40%;
-    position: absolute;
-    top: 0;
-    width: 4px;
-    margin-left: -8px;
-    margin-top: 1px;
-    
-}
-#About p{
-    border-bottom: 1px dashed #555;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    color: #000;
-}
 
 .cla li:nth-child(odd){
     padding-top: 10px;
@@ -398,6 +300,7 @@ text-align: center;
                 font-size: 20px;}
             #Portfolio i{
                 position: absolute; top: 0; left: 0; width: 100%;
+                color: #ff305b;
             }
             .logo{
                 margin-top: 20px;
@@ -418,7 +321,8 @@ text-align: center;
 footer{
     background-color: rgba(0, 0,0,0.8);
     width: 100%;
-    height: 150px;
+    height: 100%;
+    padding: 10px;
     color: #FFF;
     display: flex;
     justify-content: center;
@@ -438,6 +342,8 @@ footer .foot a{
 }
 footer a:hover{
     color: #FF305b;
+    cursor: pointer;
+    text-decoration: none;
 }
 footer i{
 color: #FFF;
@@ -445,7 +351,6 @@ margin-right: 10px;
 }
 
 footer .foot{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    margin-top: 5px;
 }
